--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec node_modules/.bin/babel-node src/server.js",
+    "babel:node": "babel-node",
+    "start": "nodemon --exec npm run babel:node src/server.js",
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist",
     "prepare": "husky install",
