--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist",
     "prepare": "husky install",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "lint:staged": "lint-staged"
   },
   "repository": {
@@ -27,6 +29,10 @@
     "@babel/core": "^7.16.5",
     "@babel/node": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "nodemon": "^2.0.15",
