chore(dev): linter para los mensajes de los commits

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky install",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "lint:staged": "lint-staged"
+    "lint:staged": "lint-staged",
+    "lint:commit": "commitlint --edit"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,8 @@
     "@babel/core": "^7.16.5",
     "@babel/node": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
